--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.302.0",
+    "downloadjs": "^1.4.7",
     "express": "^4.16.3"
   },
   "engines": {
