--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "uidynamic",
-  "version": "1.0.0",
-  "description": "Creative and Dynamic UI choice for developers",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "server": "npm run build --prefix client && nodemon server.js",
-    "client": "npm start --prefix client",
-    "build-client": "npm run build --prefix client",
-    "client-install": "npm install --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-  },
-  "keywords": [
-    "ui",
-    "dynamic",
-    "components",
-    "ux",
-    "creative"
-  ],
-  "author": "mister_shadrack",
-  "license": "ISC",
-  "dependencies": {
-    "aws-sdk": "^2.302.0",
-    "downloadjs": "^1.4.7",
-    "express": "^4.16.3"
-  },
-  "engines": {
-    "node": "^12.14.1",
-    "npm": "^6.13.4"
-  }
+	"name": "uidynamic",
+	"version": "1.0.0",
+	"description": "Creative and Dynamic UI choice for developers",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"server": "nodemon server.js",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+	},
+	"keywords": [
+		"ui",
+		"dynamic",
+		"components",
+		"ux",
+		"creative"
+	],
+	"author": "mister_shadrack",
+	"license": "ISC",
+	"dependencies": {
+		"aws-sdk": "^2.302.0",
+		"downloadjs": "^1.4.7",
+		"express": "^4.16.3"
+	},
+	"engines": {
+		"node": "^12.14.1",
+		"npm": "^6.13.4"
+	}
 }
