--- a/package.json
+++ b/package.json
@@ -5,16 +5,9 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"server": "nodemon server.js",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		"server": "nodemon server.js"
 	},
-	"keywords": [
-		"ui",
-		"dynamic",
-		"components",
-		"ux",
-		"creative"
-	],
+	"keywords": [ "ui", "dynamic", "components", "ux", "creative" ],
 	"author": "mister_shadrack",
 	"license": "ISC",
 	"dependencies": {
