--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
 		"start": "node server.js",
 		"server": "nodemon server.js"
 	},
-	"keywords": [ "ui", "dynamic", "components", "ux", "creative" ],
+	"keywords": [
+		"ui",
+		"dynamic",
+		"components",
+		"ux",
+		"creative"
+	],
 	"author": "mister_shadrack",
 	"license": "ISC",
 	"dependencies": {
 		"aws-sdk": "^2.302.0",
+		"cors": "^2.8.5",
 		"downloadjs": "^1.4.7",
 		"express": "^4.16.3"
 	},
