--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 	"dependencies": {
 		"aws-sdk": "^2.302.0",
 		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
 		"downloadjs": "^1.4.7",
-		"express": "^4.16.3"
+		"express": "^4.16.3",
+		"jsonwebtoken": "^8.5.1"
 	},
 	"engines": {
 		"node": "^12.14.1",
